--- a/mount-randomizer-v2/func.yaml
+++ b/mount-randomizer-v2/func.yaml
@@ -5,7 +5,7 @@ timeout: 60
 idle_timeout: 60   
 runtime: java11
 build_image: fnproject/fn-java-fdk-build:jdk11-1.0.124
-run_image: fnproject/fn-java-fdk:jre11-1.0.124
+run_image: fnproject/fn-java-fdk:jre11-latest
 cmd: com.example.fn.HelloFunction::handleRequest
 config:
   funcKey1: funcValue1
