--- a/mount-randomizer-v2/func.yaml
+++ b/mount-randomizer-v2/func.yaml
@@ -1,7 +1,9 @@
 schema_version: 20180708
 name: myfunc
-version: 0.0.45
+version: 0.0.47
 runtime: java
+build_image: fnproject/fn-java-fdk-build:jdk17-1.0.165
+run_image: fnproject/fn-java-fdk:jre17-1.0.165
 cmd: com.example.fn.HelloFunction::handleRequest
 timeout: 60
 idle_timeout: 60
